samples/_failures_safe/1761264978_158723_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0beedad1.c: In function ‘main’:
./samples/SAFE/__tmp_0beedad1.c:147:16: error: expected ‘;’ at end of input
  147 |     init_matrix
      |                ^
      |                ;
./samples/SAFE/__tmp_0beedad1.c:147:5: error: expected declaration or statement at end of input
  147 |     init_matrix
      |     ^~~~~~~~~~~
